added pm1 and pm10 readout

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,11 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+upload_protocol = espota
+upload_port = 192.168.90.156
+upload_flags = --auth="xxx"
 lib_deps =
      bblanchon/ArduinoJson @ ^6.18.3
      knolleary/PubSubClient @ ^2.8
      tzapu/WiFiManager @ ^0.16.0
+
